--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -12,10 +12,11 @@
 {% endblock %}
 
 {% block main %}
-{% set parent = course.course.parents[0] %}
+{% if course.course.parents|length != 0 %}
+    {% set parent = course.course.parents[0] %}
+{% endif %}
 {% set year = '2018' %}
 
-{{dump(course)}}
 
     <div class="container-fluid">
         <div class="row d-flex flex-row m-3">
@@ -279,6 +280,23 @@
         <div class="progress mb-3" style="height: 5px;">
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+        <div>
+            {% for row in course.courseResourceEquipments|batch(3) %}
+                <div class="row mx-3 d-flex flex-row my-3">
+                    {% for courseResourceEquipment in row %}
+                        {% if courseResourceEquipment.equipment.labelVisibility == true %}
+                            <div class="col-md-4 d-flex flex-row justify-content-center align-items-center">
+                                <div>{{courseResourceEquipment.equipment.label}}
+                                {% if courseResourceEquipment.description != null %}
+                                    <br> {{courseResourceEquipment.description}} 
+                                {% endif %}
+                                </div>
+                            </div> 
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            {% endfor %} 
+        </div>
 
 
         <div class="row mx-3 d-flex flex-row">
@@ -296,7 +314,7 @@
         <div class="row mx-3 d-flex flex-row">
             {% for ressource in course.educationalResources %}
                 <div class="row mx-3 d-flex flex-row">
-                 {{ressource.description}}
+                 {{ressource.description|raw}}
                 </div>
             {% endfor %}
         </div>
@@ -306,6 +324,13 @@
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ELEMENTS BIBLIOGRAPHIQUES</h5>
             </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            {% for ressource in course.bibliographicResources %}
+                <div class="row mx-3 d-flex flex-row">
+                 {{ressource.description|raw}}
+                </div>
+            {% endfor %}
         </div>
 
 
@@ -326,12 +351,18 @@
                 <h5 class="m-0">AGENDA / CALENDRIER</h5>
             </div>
         </div>
+        <div class="row mx-3 d-flex flex-row">
+                 {{course.agenda|raw}}
+        </div>
 
 
         <div class="row mx-3 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ORGANISATION DU COURS</h5>
             </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+                 {{course.organization|raw}}
         </div>
 
 
