--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -12,6 +12,7 @@
                 <div class="row">
                     <div class="col">
                         {{ form_widget(activity.description) }}
+                        <label alt="Préciser si nécessaire" placeholder="Préciser si nécessaire"></label>
                     </div>
                 </div>
             </div>
