--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -18,12 +18,19 @@
         <div class="row">
             <div class="col">
                 {{ form_widget(section.title) }}
+                <label alt="Titre" placeholder="Titre"></label>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class="collapse multi-collapse" id="collapse_{{ section.vars.id }}">
-                    <div class="row mt-3">
+                    <div class="row">
+                        <div class="col">
+                            {{ form_widget(section.type) }}
+                            <label alt="Type" placeholder="Type"></label>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col">
                             <div class="row">
                                 <div class="col">
