--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -17,8 +17,6 @@
 {% endif %}
 {% set year = '2018' %}
 
-{{dump(course)}}
-
 
     <div class="container-fluid">
         <div class="row d-flex flex-row m-3">
@@ -95,7 +93,7 @@
                     </div>
                 {% endif %}
                 {% if course.mediaType == "image" %}
-                    <img src={{course.image}} class="img-fluid" alt="Responsive image">
+                    <img src={{ asset('data/' ~ course.image) }} class="img-fluid" alt="Responsive image">
                 {% endif %}
             </div>
         </div>
@@ -112,43 +110,44 @@
                 {% elseif course.teachingMode == "hybrid" %}
                     <img class="w-100 mx-3" src="{{ asset('images/hybride.png') }}">
                 {% endif %}
-                <span class="font-weight-bold media-body"> {{course.teachingMode}} <br>
-                    <span class="font-weight-normal">
+                <span class="font-weight-bold media-body d-flex flex-column justify-content-center align-items-start"> 
+                    <span>{{course.teachingMode}}</span>
+                    <span class="font-weight-normal d-flex flex-column justify-content-center align-items-start">
                         {% if course.teachingMode == "class" %}
                             {% if course.teachingCmClass != null %}
-                                {{ course.teachingCmClass }} CM <br>
+                                <span>{{ course.teachingCmClass }} CM</span> 
                             {% endif %}
                             {% if course.teachingTdClass != null %}
-                            {{ course.teachingTdClass}} TD <br>
+                                <span>{{ course.teachingTdClass}} TD</span> 
                         {% endif %}
                             {% if course.teachingTpClass != null %}
-                                {{ course.teachingTpClass}} TP
+                                <span>{{ course.teachingTpClass}} TP</span>
                             {% endif %}
                             {% if course.teachingOtherClass != null %}
-                                {{ course.teachingOtherClass}} Autre
+                                <span>{{ course.teachingOtherClass}} Autre</span>
                             {% endif %}
                         {% endif %}
                         {% if course.teachingMode == "hybrid" %}
                             {% if course.teachingCmHybridClass != null %}
-                                {{ course.teachingCmHybridClass }} CM <br>
+                                <span>{{ course.teachingCmHybridClass }} CM</span> 
                             {% endif %}
                             {% if course.teachingTdHybridClass != null %}
-                            {{ course.teachingTdHybridClass}} TD <br>
+                                <span>{{ course.teachingTdHybridClass}} TD</span> 
                         {% endif %}
                             {% if course.teachingTpHybridClass != null %}
-                            {{ course.teachingTpHybridClass}} TP
+                                <span>{{ course.teachingTpHybridClass}} TP</span>
                         {% endif %}
                             {% if course.teachingOtherHybridClass != null %}
-                            {{ course.teachingOtherHybridClass}} Autre
+                                <span>{{ course.teachingOtherHybridClass}} Autre</span>
                         {% endif %}
                             {% if course.teachingCmHybridDist != null %}
-                            {{ course.teachingCmHybridDist }} CM <br>
+                                <span>{{ course.teachingCmHybridDist }} CM</span> 
                         {% endif %}
                             {% if course.teachingTdHybridDist != null %}
-                            {{ course.teachingTdHybridDist}} TD <br>
+                                <span>{{ course.teachingTdHybridDist}} TD</span> 
                         {% endif %}
                             {% if course.teachingOtherHybridDist != null %}
-                                {{ course.teachingOtherHybridDist}} Autre
+                                <span>{{ course.teachingOtherHybridDist}} Autre</span>
                             {% endif %}
                         {% endif %}
                     </span>
@@ -156,7 +155,7 @@
             </div>
             <div class="col-md-4 media d-flex align-items-center">
                 <img class="img-thumbnail m-3" src="https://via.placeholder.com/100" alt="...">
-                <span class="font-weight-bold media-body">Mobilité <br> internationale</span>
+                <span class="font-weight-bold media-body">Mobilité internationale</span>
             </div>
         </div>
 
@@ -325,10 +324,12 @@
             <div class="col-md-4 media d-flex align-items-center">
                 <h3 class="border rounded-circle font-weight-bold h-75 p-3 m-3"> {{course.mccWeight}}% </h3>
                 <span class="font-weight-bold media-body"> Poids de l'ECUE dans l'UE </span>
+                <i class="fas fa-2x fa-info-circle"></i>
             </div>
             <div class="col-md-4 media d-flex align-items-center">
                 <i class="fas m-3 fa-4x fa-check-circle"></i>
                 <span class="font-weight-bold media-body"> UE compensable </span>
+                <i class="fas fa-2x fa-info-circle"></i>
             </div>
             <div class="col-md-4 media d-flex align-items-center">
                 {% if course.mccCapitalizable == true %}
@@ -337,6 +338,7 @@
                 <i class="fas m-3 fa-4x fa-times-circle"></i>
                 {% endif %}
                 <span class="font-weight-bold media-body"> UE capitalisable </span>
+                <i class="fas fa-2x fa-info-circle"></i>
             </div>
         </div>
 
@@ -351,18 +353,28 @@
         <div class="progress mb-3" style="height: 5px;">
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">MATERIEL OBLIGATOIRE</h5>
+            </div>
+        </div>
         <div>
             {% for row in course.courseResourceEquipments|batch(3) %}
                 <div class="row mx-3 d-flex flex-row my-3">
                     {% for courseResourceEquipment in row %}
                         {% if courseResourceEquipment.equipment.labelVisibility == true %}
-                            <div class="col-md-4 d-flex flex-row justify-content-center align-items-center">
-                                <div>{{courseResourceEquipment.equipment.label}}
-                                {% if courseResourceEquipment.description != null %}
-                                    <br> {{courseResourceEquipment.description}} 
-                                {% endif %}
+                        <div class="col-md-4 d-flex flex-column justify-content-center align-items-start">
+                                <div>
+                                {{courseResourceEquipment.equipment.label}}
                                 </div>
-                            </div> 
+                        {% endif %}
+                        {% if courseResourceEquipment.description != null %}
+                            <div">
+                            {{courseResourceEquipment.description}}
+                            </div>
+                        {% endif %}
+                        {% if courseResourceEquipment.equipment.labelVisibility == true %}
+                        </div> 
                         {% endif %}
                     {% endfor %}
                 </div>
@@ -370,11 +382,6 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
-            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                <h5 class="m-0">MATERIEL OBLIGATOIRE</h5>
-            </div>
-        </div>
 
 
         <div class="row mx-3 d-flex flex-row">
